compute/kubernetes/stg/platform/auth-stg-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth-stg
  annotations:
    operator.1password.io/auto-restart: "true"
