compute/kubernetes/stg/platform/controller-stg-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: controller-stg
  annotations:
    operator.1password.io/auto-restart: "true"
