compute/kubernetes/stg/platform/exporter-stg-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exporter-stg
  annotations:
    operator.1password.io/auto-restart: "true"
