compute/kubernetes/stg/platform/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stg-alerts
  annotations:
    operator.1password.io/auto-restart: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: stg-apex
  annotations:
    operator.1password.io/auto-restart: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: stg-core
  annotations:
    operator.1password.io/auto-restart: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: stg-controller
  annotations:
    operator.1password.io/auto-restart: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: stg-dates
  annotations:
    operator.1password.io/auto-restart: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: stg-exporter
  annotations:
    operator.1password.io/auto-restart: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: stg-fleet
  annotations:
    operator.1password.io/auto-restart: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: stg-locations
  annotations:
    operator.1password.io/auto-restart: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: stg-offer
  annotations:
    operator.1password.io/auto-restart: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: stg-performance
  annotations:
    operator.1password.io/auto-restart: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: stg-plans
  annotations:
    operator.1password.io/auto-restart: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: stg-infrastructure
  annotations:
    operator.1password.io/auto-restart: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: stg-tracker
  annotations:
    operator.1password.io/auto-restart: "true"
