compute/kubernetes/stg/platform/offer-stg-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: offer-stg
  annotations:
    operator.1password.io/auto-restart: "true"
