compute/kubernetes/stg/platform/performance-stg-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: performance-stg
  annotations:
    operator.1password.io/auto-restart: "true"
