compute/kubernetes/stg/platform/plans-stg-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plans-stg
  annotations:
    operator.1password.io/auto-restart: "true"
