compute/kubernetes/stg/platform/stops-stg-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stops-stg
  annotations:
    operator.1password.io/auto-restart: "true"
