compute/kubernetes/stg/platform/tracker-stg-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tracker-stg
  annotations:
    operator.1password.io/auto-restart: "true"
